--- a/manifest.yml
+++ b/manifest.yml
@@ -3,10 +3,11 @@ applications:
 - name: hellospring
   memory: 512M
   instances: 2
+  path: target/hellospring-0.0.1-SNAPSHOT.jar
   buildpack: java_buildpack_offline
   health-check-type: http
   health-check-http-endpoint: /livez
   readiness-health-check-type: http
   readiness-health-check-http-endpoint: /readyz
   env:
-    JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 17.+ }, memory_calculator: { stack_threads: 25 }}'
+    JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 21.+ }, memory_calculator: { stack_threads: 25 }}'
