--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.3</version>
+		<version>3.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -13,24 +13,34 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>hellospring</name>
 	<description>Demo project for Spring Boot</description>
+	<url/>
+	<licenses>
+		<license/>
+	</licenses>
+	<developers>
+		<developer/>
+	</developers>
+	<scm>
+		<connection/>
+		<developerConnection/>
+		<tag/>
+		<url/>
+	</scm>
 	<properties>
-		<java.version>17</java.version>
-		<!-- <jackson.version>2.16.0</jackson.version> -->
+		<java.version>21</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
@@ -52,39 +62,21 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>io.spring.javaformat</groupId>
+				<artifactId>spring-javaformat-maven-plugin</artifactId>
+				<version>0.0.45</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<inherited>true</inherited>
+						<goals>
+							<goal>validate</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-			<snapshots>
-			<enabled>false</enabled>
-			</snapshots>
-			<id>spring-commercial</id>
-			<name>spring-commercial</name>
-			<url>https://repo.spring.vmware.com/artifactory/spring-commercial</url>
-		</repository>
-		<repository>
-			<snapshots />
-			<id>spring-commercial-snapshots</id>
-			<name>spring-commercial</name>
-			<url>https://repo.spring.vmware.com/artifactory/spring-commercial</url>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<snapshots>
-			<enabled>false</enabled>
-			</snapshots>
-			<id>spring-commercial</id>
-			<name>spring-commercial</name>
-			<url>https://repo.spring.vmware.com/artifactory/spring-commercial</url>
-		</pluginRepository>
-		<pluginRepository>
-			<snapshots />
-			<id>spring-commercial-snapshots</id>
-			<name>spring-commercial</name>
-			<url>https://repo.spring.vmware.com/artifactory/spring-commercial</url>
-		</pluginRepository>
-	</pluginRepositories>
 
 </project>
