--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@
 management.endpoint.health.probes.enabled=true
 management.endpoint.health.probes.add-additional-paths=true
 
-management.endpoint.health.group.readiness.include=readinessState,customState
+# management.endpoint.health.group.readiness.include=readinessState,customState
 management.endpoint.health.show-components=always
 management.endpoint.health.show-details=always
